2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-video.jpg,
	  www.gnome.org/projects/cheese/tour.html: 
	  update the screenshots for the cheese tour

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  screenshots were messed up, menu change

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg: 
	  prettyfiy my pictures ;)

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  new news entry about the tour

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/data/tour,
	  www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-video.jpg,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html,