@@ -51,8 +51,9 @@
             Cheese is an program for the Gnome Desktop which allows you to take
             photos, videos, and anything else you can think of with your webcam.
             <br/>
-            Cheese allows you to take photos with your webcam. Just start it up
-            and shoot! Gather all of your friends around, have some fun.
+            Just start it up
+            and shoot! Gather all of your friends around, have some fun! Share
+            your taken photos and videos with 'em!
             </p>
           </div>
 
