@@ -1,5 +1,10 @@
 2008-03-12  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/cheese/tour.html: 
+	  rephrase a sentence on the cheese tour
+
+2008-03-12  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
 	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
 	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
